@@ -1,0 +1,19 @@
+[buildout]
+extends = buildout.cfg
+parts = cx_Oracle test python coverage-test coverage-report
+eggs += cx_Oracle
+oracle_home = /usr/lib/oracle/xe/app/oracle/product/10.2.0/server
+
+[cx_Oracle]
+recipe = zc.recipe.egg:custom
+environment = oracle-env
+rpath = ${buildout:oracle_home}/lib
+
+[oracle-env]
+ORACLE_HOME = ${buildout:oracle_home}
+
+[test]
+environment = oracle-env
+
+[test-coverage]
+environment = oracle-env
